[package]
name = "bench-prom-decode"
version = "0.1.0"
edition = "2021"

[lib]
name = "bench_prom"
crate-type = ["lib"]

[dependencies]
base64 = "0.22"
bytes = "1.5"
greptime-proto = { git = "https://github.com/GreptimeTeam/greptime-proto", branch = "main" }
lazy_static = "1.4"
prost = "0.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "prom_decode"
harness = false
